only start container if not started, stats update

--- a/vaccines_demo.ipynb
+++ b/vaccines_demo.ipynb
@@ -98,7 +98,9 @@
     "1. Make all the countries have rows for all days\n",
     "1. Fill in missing dates.\n",
     "1. Do not fill with hard coded numerical the values.  \n",
-    "1. We will interpolate or fill based on the specific requirements for a field"
+    "1. We will interpolate or fill based on the specific requirements for a field\n",
+    "\n",
+    "## Fill in the missing rows"
    ]
   },
   {
@@ -107,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logging.info(\"Prior to adding missing days\")\n",
+    "logging.info(\"Prior to filling in missing rows/days\")\n",
     "# Display Statistics Mumber of missing total vaccinations values - must run against ungrouped (?) - count() is the number of non-nan\n",
     "num_rows=df_loaded['country'].size\n",
     "logging.info(\"Number of records: %s daily_vaccinations with data %s\", num_rows,df_loaded['daily_vaccinations'].count())\n",
@@ -128,22 +130,18 @@
     "    dropna=False\n",
     ").sort_index(level=1).reset_index()\n",
     "\n",
-    "logging.info(\"\")\n",
-    "logging.info(\"After to adding missing days\")\n",
     "# Display statistics: show another way to display using a list of null and not null\n",
     "# create a series where the null elements are represented by true and a series where non_null elements are represented\n",
-    "null_series = pd.isnull(df1['daily_vaccinations'])\n",
-    "null_non_series = pd.notnull(df1['daily_vaccinations'])\n",
-    "logging.info (\"Number of records: %s daily_vaccinations not empty %s empty %s\", df1['country'].size, \n",
-    "              df1[null_non_series]['daily_vaccinations'].size , df1[null_series]['daily_vaccinations'].size )\n",
-    "null_series = pd.isnull(df1['total_vaccinations'])\n",
-    "null_non_series = pd.notnull(df1['total_vaccinations'])\n",
-    "logging.info (\"Number of records: %s total_vaccinations not empty %s empty %s\", df1['country'].size, \n",
-    "              df1[null_non_series]['total_vaccinations'].size , df1[null_series]['total_vaccinations'].size )\n",
-    "null_series = pd.isnull(df1['people_fully_vaccinated_per_hundred'])\n",
-    "null_non_series = pd.notnull(df1['people_fully_vaccinated_per_hundred'])\n",
-    "logging.info (\"Number of records: %s vaccinated_per_hundred not empty %s empty %s\", df1['country'].size, \n",
-    "              df1[null_non_series]['people_fully_vaccinated_per_hundred'].size , df1[null_series]['people_fully_vaccinated_per_hundred'].size )\n",
+    "logging.info(\"\\nAfter to adding missing rows/days\")\n",
+    "logging.info (\"Number of records: %s daily_vaccinations with data %s empty %s\", df1['country'].size, \n",
+    "              df1[pd.notnull(df1['daily_vaccinations'])]['daily_vaccinations'].size , \n",
+    "              df1[pd.isnull(df1['daily_vaccinations'])]['daily_vaccinations'].size )\n",
+    "logging.info (\"Number of records: %s total_vaccinations with data %s empty %s\", df1['country'].size, \n",
+    "              df1[pd.notnull(df1['total_vaccinations'])]['total_vaccinations'].size , \n",
+    "              df1[pd.isnull(df1['total_vaccinations'])]['total_vaccinations'].size )\n",
+    "logging.info (\"Number of records: %s vaccinated_per_hundred with data %s empty %s\", df1['country'].size, \n",
+    "              df1[pd.notnull(df1['people_fully_vaccinated_per_hundred'])]['people_fully_vaccinated_per_hundred'].size , \n",
+    "              df1[pd.isnull(df1['people_fully_vaccinated_per_hundred'])]['people_fully_vaccinated_per_hundred'].size )\n",
     "\n",
     "\n"
    ]
@@ -305,6 +303,13 @@
     "\n",
     "fig.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
