create logging string builders

--- a/vaccines_demo.ipynb
+++ b/vaccines_demo.ipynb
@@ -22,9 +22,15 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import plotly.express as px\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "import plotly.express as px"
+    "from io import StringIO\n",
+    "\n",
+    "import os\n",
+    "import logging, sys\n",
+    "logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
+    "logging.info(\"Local data directory holds: %s\", os.listdir(\"data\"))\n"
    ]
   },
   {
@@ -33,10 +39,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import logging, sys\n",
-    "logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
-    "logging.info(\"Local data directory holds: %s\", os.listdir(\"data\"))\n"
+    "# Function that describes the current state of the interesting fields in a vaccination dataframe\n",
+    "def log_vaccination_stats(banner, target_frame):\n",
+    "    s1 = banner\n",
+    "    # Display Statistics Mumber of missing total vaccinations values - must run against ungrouped (?) - count() is the number of non-nan\n",
+    "    num_rows=target_frame['country'].size\n",
+    "    s2 = \"\\nNumber of records: {} daily_vaccinations     with data {} empty {}\".format(\n",
+    "        num_rows,\n",
+    "        target_frame['daily_vaccinations'].count(),\n",
+    "        target_frame['daily_vaccinations'].isna().sum()\n",
+    "    )\n",
+    "    s3 = \"\\nNumber of records: {} total_vaccinations     with data {} empty {}\".format(\n",
+    "        num_rows,\n",
+    "        target_frame['total_vaccinations'].count(),\n",
+    "        target_frame['total_vaccinations'].isna().sum()\n",
+    "    )\n",
+    "    s4 = \"\\nNumber of records: {} vaccinated_per_hundred with data {} empty {}\".format(\n",
+    "        num_rows,\n",
+    "        target_frame['people_fully_vaccinated_per_hundred'].count(),\n",
+    "        target_frame['people_fully_vaccinated_per_hundred'].isna().sum()\n",
+    "    )\n",
+    "    return s1+s2+s3+s4\n",
+    "\n",
+    "# Display statistics: show another way to display using a list of null and not null\n",
+    "# create a series where the null elements are represented by true and a series where non_null elements are represented\n",
+    "def log_vaccination_stats_2(banner,target_frame):\n",
+    "    s1 =banner\n",
+    "    s2 =\"\\nNumber of records: {} daily_vaccinations     with data {} empty {}\".format(\n",
+    "        target_frame['country'].size, \n",
+    "        target_frame[pd.notnull(target_frame['daily_vaccinations'])]['daily_vaccinations'].size , \n",
+    "        target_frame[pd.isnull(target_frame['daily_vaccinations'])]['daily_vaccinations'].size )\n",
+    "    s3 = \"\\nNumber of records: {} total_vaccinations     with data {} empty {}\".format(\n",
+    "        target_frame['country'].size,                   \n",
+    "        target_frame[pd.notnull(target_frame['total_vaccinations'])]['total_vaccinations'].size , \n",
+    "        target_frame[pd.isnull(target_frame['total_vaccinations'])]['total_vaccinations'].size )\n",
+    "    s4 = \"\\nNumber of records: {} vaccinated_per_hundred with data {} empty {}\".format(\n",
+    "        target_frame['country'].size, \n",
+    "        target_frame[pd.notnull(target_frame['people_fully_vaccinated_per_hundred'])]['people_fully_vaccinated_per_hundred'].size , \n",
+    "        target_frame[pd.isnull(target_frame['people_fully_vaccinated_per_hundred'])]['people_fully_vaccinated_per_hundred'].size )\n",
+    "    return s1+s2+s3+s4\n",
+    "\n",
+    "# logs out the field types in a dataframe                                        \n",
+    "def log_datatypes(banner, target_frame):\n",
+    "    output = StringIO()\n",
+    "    target_frame.info(buf=output)\n",
+    "    return \"{}\\n{}\".format(banner,output.getvalue())\n",
+    "\n",
+    "# Sort the data by date mixes by country so lets do ordered sorting on two columns\n",
+    "def log_vaccination_samples(banner, target_frame):\n",
+    "    return \"{} \\n{}\".format(\n",
+    "        banner , \n",
+    "        target_frame.sort_values(['country','date'], ascending=True)[['country','date','total_vaccinations','daily_vaccinations','total_vaccinations']])                                         \n"
    ]
   },
   {
@@ -54,24 +107,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from io import StringIO\n",
     "#import data\n",
     "df_loaded = pd.read_csv('data/vaccinations.csv',parse_dates=True)\n",
-    "\n",
-    "# show the data after data load\n",
-    "output = StringIO()\n",
-    "df_loaded.info(buf=output)\n",
-    "logging.debug(\"Schema prior to date conversion %s\",output.getvalue())\n",
+    "logging.debug(log_datatypes(\"Schema prior to date conversion\", df_loaded))\n",
     "\n",
     "# Lets have a better name for name :-)\n",
     "df_loaded['country']=df_loaded['location']\n",
     "# lets convert the dates from strings to real dates\n",
     "df_loaded['date'] = pd.to_datetime(df_loaded['date'])\n",
     "\n",
-    "# show the data types after conversion\n",
-    "output = StringIO()\n",
-    "df_loaded.info(buf=output)\n",
-    "logging.debug(\"Schema after to date conversion %s\",output.getvalue())"
+    "logging.debug(log_datatypes(\"Schema after to date conversion\", df_loaded))"
    ]
   },
   {
@@ -109,17 +154,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logging.info(\"Prior to filling in missing rows/days\")\n",
-    "# Display Statistics Mumber of missing total vaccinations values - must run against ungrouped (?) - count() is the number of non-nan\n",
-    "num_rows=df_loaded['country'].size\n",
-    "logging.info(\"Number of records: %s daily_vaccinations with data %s\", num_rows,df_loaded['daily_vaccinations'].count())\n",
-    "logging.info(\"Number of records: %s total_vaccinations with data %s\", num_rows,df_loaded['total_vaccinations'].count())\n",
-    "logging.info(\"Number of records: %s vaccinated_per_hundred with data %s\", num_rows,df_loaded['people_fully_vaccinated_per_hundred'].count())\n",
+    "logging.info(log_vaccination_stats(\"Prior to filling in missing rows/days\", df_loaded))\n",
     "\n",
     "# fill in missing dates https://stackoverflow.com/questions/44978196/pandas-filling-missing-dates-and-values-within-group\n",
     "# but leave new values as nan so that we can try and extrapolate\n",
     "# this does not \"extrapolate\" the missing start/end values - probably should fill with 0 from start to first value\n",
-    "df1 = df_loaded.set_index(\n",
+    "df_filled = df_loaded.set_index(\n",
     "    ['date', 'country']\n",
     ").unstack(\n",
     "    #fill_value=0\n",
@@ -130,31 +170,8 @@
     "    dropna=False\n",
     ").sort_index(level=1).reset_index()\n",
     "\n",
-    "# Display statistics: show another way to display using a list of null and not null\n",
-    "# create a series where the null elements are represented by true and a series where non_null elements are represented\n",
-    "logging.info(\"\\nAfter to adding missing rows/days\")\n",
-    "logging.info (\"Number of records: %s daily_vaccinations with data %s empty %s\", df1['country'].size, \n",
-    "              df1[pd.notnull(df1['daily_vaccinations'])]['daily_vaccinations'].size , \n",
-    "              df1[pd.isnull(df1['daily_vaccinations'])]['daily_vaccinations'].size )\n",
-    "logging.info (\"Number of records: %s total_vaccinations with data %s empty %s\", df1['country'].size, \n",
-    "              df1[pd.notnull(df1['total_vaccinations'])]['total_vaccinations'].size , \n",
-    "              df1[pd.isnull(df1['total_vaccinations'])]['total_vaccinations'].size )\n",
-    "logging.info (\"Number of records: %s vaccinated_per_hundred with data %s empty %s\", df1['country'].size, \n",
-    "              df1[pd.notnull(df1['people_fully_vaccinated_per_hundred'])]['people_fully_vaccinated_per_hundred'].size , \n",
-    "              df1[pd.isnull(df1['people_fully_vaccinated_per_hundred'])]['people_fully_vaccinated_per_hundred'].size )\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sort the data by date mixes by country so lets do ordered sorting on two columns\n",
-    "df_date_country = df1.sort_values(['country','date'],ascending=True)\n",
-    "logging.debug(\"After fill, Before Interpolation Country\\n%s \" , df_date_country[['country','date','total_vaccinations','daily_vaccinations','total_vaccinations']])"
+    "logging.info(log_vaccination_stats_2(\"\\nAfter to adding missing rows/days\",df_filled))\n",
+    "logging.debug(log_vaccination_samples(\"After fill, Before Interpolation Country \",df_filled))"
    ]
   },
   {
@@ -176,30 +193,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_interpolated = df_date_country\n",
+    "df_interpolated = df_filled.sort_values(['country','date'])\n",
     "\n",
     "# interpolate numerical values\n",
-    "df_interpolated['daily_vaccinations'] = df_date_country.groupby('country').daily_vaccinations.transform(lambda x: x.interpolate())\n",
-    "df_interpolated['total_vaccinations'] = df_date_country.groupby('country').total_vaccinations.transform(lambda x: x.interpolate())\n",
-    "df_interpolated['people_fully_vaccinated_per_hundred'] = df_date_country.groupby('country').people_fully_vaccinated_per_hundred.transform(lambda x: x.interpolate())\n",
-    "df_interpolated['people_vaccinated'] = df_date_country.groupby('country').people_vaccinated.transform(lambda x: x.interpolate())\n",
+    "df_interpolated['daily_vaccinations'] = df_interpolated.groupby('country').daily_vaccinations.transform(lambda x: x.interpolate())\n",
+    "df_interpolated['total_vaccinations'] = df_interpolated.groupby('country').total_vaccinations.transform(lambda x: x.interpolate())\n",
+    "df_interpolated['people_fully_vaccinated_per_hundred'] = df_interpolated.groupby('country').people_fully_vaccinated_per_hundred.transform(lambda x: x.interpolate())\n",
+    "df_interpolated['people_vaccinated'] = df_interpolated.groupby('country').people_vaccinated.transform(lambda x: x.interpolate())\n",
     "\n",
     "# String values , iso code, site, etc are the same for all rows in a country so we ffill and bfill in case early rows are missing values\n",
-    "df_interpolated['iso_code'] = df_date_country.groupby('country').iso_code.ffill().bfill()\n",
+    "df_interpolated['iso_code'] = df_interpolated.groupby('country').iso_code.ffill().bfill()\n",
     "logging.info(\"Interpolation finished\")\n",
     "\n",
     "# Show the number of missing total vaccinations values - must run against ungrouped (?)\n",
     "# count() is the number of non-nan\n",
-    "logging.info(\"After data interpolation\")\n",
-    "num_rows=df_interpolated['country'].size\n",
-    "logging.info(\"Number of records: %s daily_vaccinations with data %s\", num_rows,df_interpolated['daily_vaccinations'].count())\n",
-    "logging.info(\"Number of records: %s total_vaccinations with data %s\", num_rows,df_interpolated['total_vaccinations'].count())\n",
-    "logging.info(\"Number of records: %s vaccinated_per_hundred with data %s\", num_rows,df_interpolated['people_fully_vaccinated_per_hundred'].count())\n",
-    "\n",
-    "#Sort the data by date but mixes by country so lets do ordered sorting\n",
-    "# df_interpolated.sort_values(['country','date'])\n",
-    "df_interpolated = df_interpolated.sort_values(['country','date'],ascending=True)\n",
-    "logging.debug(\"After Interpolation: Country %s \" , df_interpolated[['total_vaccinations','daily_vaccinations','total_vaccinations']])\n"
+    "logging.info(log_vaccination_stats(\"After data interpolation\", df_interpolated))\n",
+    "logging.debug(log_vaccination_samples(\"After Interpolation: Country\\n%s\", df_interpolated))"
    ]
   },
   {
