more logging minor changes

--- a/vaccines_demo.ipynb
+++ b/vaccines_demo.ipynb
@@ -17,7 +17,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -36,7 +40,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Function that describes the current state of the interesting fields in a vaccination dataframe\n",
@@ -107,15 +115,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import data\n",
+    "#import data from csv\n",
     "df_loaded = pd.read_csv('data/vaccinations.csv',parse_dates=True)\n",
-    "logging.debug(log_datatypes(\"Schema prior to date conversion\", df_loaded))\n",
+    "# Log unique country names\n",
+    "logging.debug(\"Loaded data for countries\\n %s\", pd.unique(df_loaded[\"country\"]))\n",
     "\n",
-    "# Lets have a better name for name :-)\n",
+    "# I like 'country' better than 'name'\n",
     "df_loaded['country']=df_loaded['location']\n",
-    "# lets convert the dates from strings to real dates\n",
-    "df_loaded['date'] = pd.to_datetime(df_loaded['date'])\n",
     "\n",
+    "# lets convert the dates from strings to real dates\n",
+    "logging.debug(log_datatypes(\"Schema prior to date conversion\", df_loaded))\n",
+    "df_loaded['date'] = pd.to_datetime(df_loaded['date'])\n",
     "logging.debug(log_datatypes(\"Schema after to date conversion\", df_loaded))"
    ]
   },
@@ -125,11 +135,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# random demo here\n",
-    "\n",
-    "# What are the countries\n",
-    "logging.debug(\"Loaded data for countries\\n %s\", pd.unique(df_loaded[\"country\"]))\n",
-    "\n",
     "#Log the countries with the most data\n",
     "logging.debug(\"the number of days for each country %s\",df_loaded.country.value_counts())\n",
     "logging.debug(\"the number of countries with more than a month worth the data %s\",df_loaded.country.value_counts()[lambda day_count: day_count > 30])"
