--- a/vaccinations_by_country.ipynb
+++ b/vaccinations_by_country.ipynb
@@ -48,6 +48,7 @@
    "outputs": [],
    "source": [
     "# Function that describes the current state of the interesting fields in a vaccination dataframe\n",
+    "# We cannot put the actual logging statements here because they will not show up in the cells that called these functions\n",
     "def log_vaccination_stats(banner, target_frame):\n",
     "    s1 = banner\n",
     "    # Display Statistics Mumber of missing total vaccinations values - must run against ungrouped (?) - count() is the number of non-nan\n",
@@ -118,7 +119,7 @@
     "#import data from csv\n",
     "df_loaded = pd.read_csv('data/vaccinations.csv',parse_dates=True)\n",
     "# Log unique country names\n",
-    "logging.debug(\"Loaded data for countries\\n %s\", pd.unique(df_loaded[\"country\"]))\n",
+    "logging.debug(\"Loaded data for countries\\n %s\", pd.unique(df_loaded[\"location\"]))\n",
     "\n",
     "# I like 'country' better than 'name'\n",
     "df_loaded['country']=df_loaded['location']\n",
