--- a/vaccinations_by_country.ipynb
+++ b/vaccinations_by_country.ipynb
@@ -133,7 +133,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "#Log the countries with the most data\n",
