--- a/vaccinations_by_country.ipynb
+++ b/vaccinations_by_country.ipynb
@@ -42,11 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Function that describes the current state of the interesting fields in a vaccination dataframe\n",
@@ -54,7 +50,7 @@
     "def log_vaccination_stats(banner, target_frame):\n",
     "    # Display Statistics Mumber of missing total vaccinations values - must run against ungrouped (?) - count() is the number of non-nan\n",
     "    num_rows=target_frame['location'].size\n",
-    "    s2 = \"\\nNumber of records: {} daily_vaccinations     with data {} empty {}\".format(\n",
+    "    s2 = \"\\nNumber of records: {} daily_vaccinations             with data {} empty {}\".format(\n",
     "        num_rows,\n",
     "        target_frame['daily_vaccinations'].count(),\n",
     "        target_frame['daily_vaccinations'].isna().sum()\n",
@@ -64,12 +60,12 @@
     "        target_frame['daily_vaccinations_per_million'].count(),\n",
     "        target_frame['daily_vaccinations_per_million'].isna().sum()\n",
     "    )\n",
-    "    s4 = \"\\nNumber of records: {} vaccinated_per_hundred with data {} empty {}\".format(\n",
+    "    s4 = \"\\nNumber of records: {} vaccinated_per_hundred         with data {} empty {}\".format(\n",
     "        num_rows,\n",
     "        target_frame['people_fully_vaccinated_per_hundred'].count(),\n",
     "        target_frame['people_fully_vaccinated_per_hundred'].isna().sum()\n",
     "    )\n",
-    "    s5 = \"\\nNumber of records: {} total_vaccinations     with data {} empty {}\".format(\n",
+    "    s5 = \"\\nNumber of records: {} total_vaccinations             with data {} empty {}\".format(\n",
     "        num_rows,\n",
     "        target_frame['total_vaccinations'].count(),\n",
     "        target_frame['total_vaccinations'].isna().sum()\n",
@@ -79,7 +75,7 @@
     "# Display statistics: show another way to display using a list of null and not null\n",
     "# create a series where the null elements are represented by true and a series where non_null elements are represented\n",
     "def log_vaccination_stats_2(banner,target_frame):\n",
-    "    s2 =\"\\nNumber of records: {} daily_vaccinations     with data {} empty {}\".format(\n",
+    "    s2 =\"\\nNumber of records: {} daily_vaccinations              with data {} empty {}\".format(\n",
     "        target_frame['location'].size, \n",
     "        target_frame[pd.notnull(target_frame['daily_vaccinations'])]['daily_vaccinations'].size , \n",
     "        target_frame[pd.isnull(target_frame['daily_vaccinations'])]['daily_vaccinations'].size )\n",
@@ -87,11 +83,11 @@
     "        target_frame['location'].size, \n",
     "        target_frame[pd.notnull(target_frame['daily_vaccinations_per_million'])]['daily_vaccinations_per_million'].size , \n",
     "        target_frame[pd.isnull(target_frame['daily_vaccinations_per_million'])]['daily_vaccinations_per_million'].size )\n",
-    "    s4 = \"\\nNumber of records: {} vaccinated_per_hundred with data {} empty {}\".format(\n",
+    "    s4 = \"\\nNumber of records: {} vaccinated_per_hundred         with data {} empty {}\".format(\n",
     "        target_frame['location'].size, \n",
     "        target_frame[pd.notnull(target_frame['people_fully_vaccinated_per_hundred'])]['people_fully_vaccinated_per_hundred'].size , \n",
     "        target_frame[pd.isnull(target_frame['people_fully_vaccinated_per_hundred'])]['people_fully_vaccinated_per_hundred'].size )\n",
-    "    s5 = \"\\nNumber of records: {} total_vaccinations     with data {} empty {}\".format(\n",
+    "    s5 = \"\\nNumber of records: {} total_vaccinations             with data {} empty {}\".format(\n",
     "        target_frame['location'].size,                   \n",
     "        target_frame[pd.notnull(target_frame['total_vaccinations'])]['total_vaccinations'].size , \n",
     "        target_frame[pd.isnull(target_frame['total_vaccinations'])]['total_vaccinations'].size )\n",
@@ -176,9 +172,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Countries didn't supply data every day\n",
-    "1. Make all the countries have rows for all days\n",
-    "1. Fill in missing dates.\n",
+    "## Entities do not supply data every day\n",
+    "1. Make all the countries/states have rows for all days\n",
+    "    1. Fill in missing dates.\n",
     "1. Do not fill with hard coded numerical the values.  \n",
     "1. We will interpolate or fill based on the specific requirements for a field\n",
     "\n",
