--- a/vaccinations_by_country.ipynb
+++ b/vaccinations_by_country.ipynb
@@ -20,7 +20,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -42,7 +44,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Function that describes the current state of the interesting fields in a vaccination dataframe\n",
@@ -122,7 +130,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -157,7 +167,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -185,7 +197,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -228,7 +242,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -261,7 +277,7 @@
     "#### TODO\n",
     "Present more data as bubble sizing\n",
     "\n",
-    "# Daily Vaccinations per Million"
+    "# Vaccinated / 100 over Daily Vaccinations / Million"
    ]
   },
   {
@@ -278,7 +294,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -320,7 +338,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -355,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Daily Vaccinations - Raw count\n",
+    "# Vaccinated / 100 over Daily Vaccinations / Million\n",
     "## log(X),log(y) with vaccinations per hundered Y axis max value 70%\n",
     "The log(y) axis streteches the early progress and compresses the later gains. \n",
     "This is useful when in the early stages of the pandemic where the overall vaccination rates are low"
@@ -365,7 +385,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -408,7 +430,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     }
    },
