--- a/vaccinations_by_country.ipynb
+++ b/vaccinations_by_country.ipynb
@@ -5,15 +5,15 @@
    "metadata": {},
    "source": [
     "## Credits\n",
-    "* This program uses the data collected at https://ourworldindata.org/covid-vaccinations\n",
-    "* I got inspiration for doing this after seeing an early version by https://github.com/Ken-Freeman\n",
+    "1. This program uses the data collected at https://ourworldindata.org/covid-vaccinations\n",
+    "1. I got inspiration for doing this after seeing an early version by https://github.com/Ken-Freeman\n",
     "\n",
     "## Setup\n",
     "Download the data csv file and put it in the data directory prior to running this program. The included shell scripts download data.\n",
     "\n",
     "## Design Considerations and Artifacts\n",
-    "* This notebook creates new variables when that would make no sense in a large data problem.\n",
-    "* It does this so that we can go back and look at previous values"
+    "1. This notebook creates new variables when that would make no sense in a large data problem.\n",
+    "1. It does this so that we can go back and look at previous values"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "metadata": {},
    "source": [
     "## Load the Data\n",
-    "1. Select 'world' or 'state' - US States\n",
+    "1. Requests data set selection: 'world' for all coiuntries or 'state' for US States\n",
     "1. Load the data\n",
     "1. Convert the date fields from string to date\n",
     "1. Remove 2020 data because it is depressing"
@@ -375,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Vaccinated / 100 over Daily Vaccinations / Million\n",
+    "# Vaccinated / 100 over Daily Vaccinations raw number\n",
     "## log(X),log(y) with vaccinations per hundered Y axis max value 70%\n",
     "The log(y) axis streteches the early progress and compresses the later gains. \n",
     "This is useful when in the early stages of the pandemic where the overall vaccination rates are low"
