wrap some text in notebook

--- a/vaccinations_by_country.ipynb
+++ b/vaccinations_by_country.ipynb
@@ -20,9 +20,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -45,9 +43,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -130,9 +126,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -167,9 +161,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -197,9 +189,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -242,9 +232,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -294,9 +282,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -316,12 +302,13 @@
     "                 height=600,\n",
     "                 log_x=True, \n",
     "                 log_y=True,\n",
-    "                 range_x=[100+df_interpolated['daily_vaccinations_per_million'].min(),df_interpolated['daily_vaccinations_per_million'].max()],\n",
-    "                 range_y=[0.1,70],\n",
+    "                 range_x=[100+df_interpolated['daily_vaccinations_per_million'].min(),\n",
+    "                          df_interpolated['daily_vaccinations_per_million'].max()],\n",
+    "                 range_y=[0.1,80],\n",
     "                 labels={\"daily_vaccinations_per_million\": \"Daily Vaccinations / million\",\n",
     "                         \"people_fully_vaccinated_per_hundred\": \"Fully Vaccinated / 100\",\n",
     "                         \"location\": \"Country\"\n",
-    "                        }                 \n",
+    "                        }\n",
     "                )\n",
     "fig.show()\n"
    ]
@@ -338,9 +325,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -360,8 +345,9 @@
     "                 height=600,\n",
     "                 log_x=True, \n",
     "                 log_y=False,\n",
-    "                 range_x=[100+df_interpolated['daily_vaccinations_per_million'].min(),df_interpolated['daily_vaccinations_per_million'].max()],\n",
-    "                 range_y=[0.1,70],\n",
+    "                 range_x=[100+df_interpolated['daily_vaccinations_per_million'].min(),\n",
+    "                          df_interpolated['daily_vaccinations_per_million'].max()],\n",
+    "                 range_y=[0.1,80],\n",
     "                 labels={\"daily_vaccinations_per_million\": \"Daily Vaccinations / million\",\n",
     "                         \"people_fully_vaccinated_per_hundred\": \"Fully Vaccinated / 100\",\n",
     "                         \"location\": \"Country\"\n",
@@ -385,9 +371,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -408,8 +392,9 @@
     "                 height=600,\n",
     "                 log_x=True, \n",
     "                 log_y=True,\n",
-    "                 range_x=[100+df_interpolated['daily_vaccinations'].min(),df_interpolated['daily_vaccinations'].max()],\n",
-    "                 range_y=[0.1,70],\n",
+    "                 range_x=[100+df_interpolated['daily_vaccinations'].min(),\n",
+    "                          df_interpolated['daily_vaccinations'].max()],\n",
+    "                 range_y=[0.1,80],\n",
     "                 labels={\"daily_vaccinations\": \"Daily Vaccinations - Raw\",\n",
     "                         \"people_fully_vaccinated_per_hundred\": \"Fully Vaccinated / 100\",\n",
     "                         \"location\": \"Country\"\n",
@@ -430,9 +415,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -452,8 +435,9 @@
     "                 height=600,\n",
     "                 log_x=True, \n",
     "                 log_y=False,\n",
-    "                 range_x=[100+df_interpolated['daily_vaccinations'].min(),df_interpolated['daily_vaccinations'].max()],\n",
-    "                 range_y=[0.1,70],\n",
+    "                 range_x=[100+df_interpolated['daily_vaccinations'].min(),\n",
+    "                          df_interpolated['daily_vaccinations'].max()],\n",
+    "                 range_y=[0.1,80],\n",
     "                 labels={\"daily_vaccinations\": \"Daily Vaccinations - Raw\",\n",
     "                         \"people_fully_vaccinated_per_hundred\": \"Fully Vaccinated / 100\",\n",
     "                         \"location\": \"Country\"\n",
