changes that came out of video

--- a/vaccinations_by_country.ipynb
+++ b/vaccinations_by_country.ipynb
@@ -307,7 +307,7 @@
     "                 range_y=[0.1,80],\n",
     "                 labels={\"daily_vaccinations_per_million\": \"Daily Vaccinations / million\",\n",
     "                         \"people_fully_vaccinated_per_hundred\": \"Fully Vaccinated / 100\",\n",
-    "                         \"location\": \"Country\"\n",
+    "                         \"location\": \"Location\"\n",
     "                        }\n",
     "                )\n",
     "fig.show()\n"
@@ -345,12 +345,12 @@
     "                 height=600,\n",
     "                 log_x=True, \n",
     "                 log_y=False,\n",
-    "                 range_x=[100+df_interpolated['daily_vaccinations_per_million'].min(),\n",
+    "                 range_x=[500,\n",
     "                          df_interpolated['daily_vaccinations_per_million'].max()],\n",
     "                 range_y=[0.1,80],\n",
     "                 labels={\"daily_vaccinations_per_million\": \"Daily Vaccinations / million\",\n",
     "                         \"people_fully_vaccinated_per_hundred\": \"Fully Vaccinated / 100\",\n",
-    "                         \"location\": \"Country\"\n",
+    "                         \"location\": \"Location\"\n",
     "                        }                 \n",
     "                )\n",
     "\n",
@@ -397,7 +397,7 @@
     "                 range_y=[0.1,80],\n",
     "                 labels={\"daily_vaccinations\": \"Daily Vaccinations - Raw\",\n",
     "                         \"people_fully_vaccinated_per_hundred\": \"Fully Vaccinated / 100\",\n",
-    "                         \"location\": \"Country\"\n",
+    "                         \"location\": \"Location\"\n",
     "                        }                 \n",
     "                )\n",
     "fig.show()"
@@ -440,7 +440,7 @@
     "                 range_y=[0.1,80],\n",
     "                 labels={\"daily_vaccinations\": \"Daily Vaccinations - Raw\",\n",
     "                         \"people_fully_vaccinated_per_hundred\": \"Fully Vaccinated / 100\",\n",
-    "                         \"location\": \"Country\"\n",
+    "                         \"location\": \"Location\"\n",
     "                        }\n",
     "                )\n",
     "fig.show()\n"
